bugfix: Create overflow barrier for pulldown

--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,7 @@
   body {
     overflow-x: hidden;
     max-width: 100vw;
+    overscroll-behavior: none;
   }
 
   body {
